# OperaIQ-Qdrant

./: .dockerignore  .env.aws.example  .env.example  .env.production.example  .gitignore  Dockerfile  LICENSE  PLAYBOOK.md  README.md  SPLUNK_SETUP.md  architecture_diagram.md  cloudbuild.sentinel.yaml  cloudbuild.yaml  docker-compose.aws.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  render.yaml  tsconfig.base.json  tsconfig.json  tsconfig.scripts.json
.github/workflows/: render-keepalive.yml
app/: __init__.py  cli.py  config.py  embedder.py  main.py  memory_service.py  models.py  seed.py  webhooks.py
app/static/: app.js  styles.css
app/templates/: index.html
apps/api/: Dockerfile  package.json  tsconfig.json
apps/api/src/: agent-events.ts  (+3 more)
apps/web/: Dockerfile  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
deploy/aws/: README.md  operaiq-compose.yml  splunk-default.yml
deploy/railway/: README.md  sentinel-api.railway.json  sentinel-web.railway.json
deploy/render/: README.md
examples/: __init__.py
scripts/: operaiq-human-flow.ts  operaiq-test-tools.ts  operaiq_human_flow.py  preflight.ts  prove_failing_app_flow.py  qdrant-seed.ts  qdrant-setup-check.ts  qdrant-verify.ts  run_demo.py  seed-data.ts  sentinel-e2e.ts  sentinel-human-flow.ts  sentinel-smoke-test.ts  sentinel-test-tools.ts  splunk-hosted-models-check.ts  splunk-seed.ts  splunk-setup-check.ts  splunk-tunnel-gateway.ts  splunk-verify.ts  test-org.ts
tests/: test_api_contract.py  test_frontend_contract.py  test_memory_service.py
(+25 files in other folders)
