[project]
name = "qdrant-sentinel-memory"
version = "0.1.0"
description = "Fresh Qdrant MVP: Sentinel-style incident memory recall with tenant-filtered vector search."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "jinja2>=3.1.4",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.1",
  "qdrant-client[fastembed]>=1.14.2",
  "uvicorn[standard]>=0.30.6",
]

[dependency-groups]
dev = [
  "httpx>=0.27.2",
  "pytest>=8.3.2",
  "ruff>=0.6.8",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
